--- a/binghamton/math-330/class-notes/1-31.md
+++ b/binghamton/math-330/class-notes/1-31.md
@@ -14,7 +14,14 @@ Prove there exists $x\in\mathbb{Z}$ that satisfies $m+x=n$.
 - $(m+(-m))+x=n+(-m)$, by axiom 1.1(ii).
 - $0+x=n+(-m)$, by the definition of an additive inverse.
 - $x=n+(-m)$, by prop. 1.7.
-- .. UNFINISHED
+
+By substituting $(n+(-m))$ for $x$:
+- $m+(n+(-m))=n$
+- $(m+(-m))+n=n$, by axiom 1.1(ii).
+- $0+n=n$, by axiom 1.4.
+- $n=n$, by prop 1.7.
+
+Therefore, $\exists x \in\mathbb{Z}$ that satisfies 
 
 Prove x is unique.
 Assume $\exists x'\in\mathbb{Z}$ that satisfies $m+x'=n$ and $x \ne x'$.  
