--- a/binghamton/math-330/hw/hw10.md
+++ b/binghamton/math-330/hw/hw10.md
@@ -19,7 +19,7 @@ Now, prove that if one statement is false, then the other must be true.
 By definition, $[a] = \{x\in A \text{ | } x\sim a\}$, and $[b] = \{x\in A \text{ | } x\sim b\}$  
 Using the definitions, $[a] \cap[b] = \{x\in A \text{ | } x\sim a \text{ and } x\sim b\}$  
 
-Case 1: Assume $[a]\neq [b]$.  Prove $[a] \cap [b] = \empty$.  
+*Case 1: Assume $[a]\neq [b]$.  Prove $[a] \cap [b] = \empty$.  
 
 By proposition 6.4(ii), since $[a]\neq[b]$, $a\nsim b$  
 The statements $x\sim a \text{ and } x\sim b$ cannot both be true, as both being true would imply by transitivity that $a\sim b$, which we know is false. Therefore, no element $x\in A$ satisfies the constraints of $[a] \cap[b]$.  
@@ -34,6 +34,29 @@ $\therefore [a]=[b]$
 
 ## Proposition 6.6
 Given an equivalence relation on A, its equivalence classes form a partition of A. Conversely, given a partition $\Pi$ of A, deﬁne $\sim$ by a $\sim$ b if and only if a and b lie in the same element of $\Pi$. Then $\sim$ is an equivalence relation.  
+
+The definition of a partition states:  
+Let $\Pi$ be a partition of a set $A$. If $p_1, p_2\in\Pi$ and $p_1 \neq p_2$, then $p_1 \cap p_2 = \empty$ and every $a\in A$ belongs to some $p\in\Pi$.  
+
+Part 1: Given an equivalence relation on A, its equivalence classes form a partition of A.  
+
+**Proof.**  
+
+Let $P:=A/\sim$, where $\sim$ is some equivalence relation.  
+To prove that the equivalence classes in $P$ form a partition, we must prove that if $[a], [b]\in P$ and $[a]\neq [b]$, then $[a] \cap [b] = \empty$. We must also prove that every $a\in A$ belongs to some $p\in P$.  
+
+Using the proof for *\*Case 1* in proposition 6.5, we know that $[a] \neq [b]\implies [a]\cap[b]=\empty$. Using proposition 6.4(i), we know any element $a\in A$ belongs to its own equivalence class, $[a]$, therefore every $a\in A$ must belong to a set in $P$, as $P$ is defined to be the set of equivalence classes of $A$.  
+**QED.**  
+
+Part 2: Given a partition $\Pi$ of $A$, deﬁne $\sim$ by a $\sim$ b if and only if a and b lie in the same element of $\Pi$. Then $\sim$ is an equivalence relation.  
+
+**Proof.**  
+Reflexitivity: For some $a\in A$, $a$ belongs to the same $p\in\Pi$ as $a$. Therefore, $a\sim a$, by our definition of the relation $\sim$.  
+Symmetry: For some $a, b\in A$, $a\sim b$ imples $a,b$ belong to the same $p\in \Pi$, which in turn implies $b\sim a$.  
+Transitivity: For some $a, b, c\in A$, $a\sim b$ and $b\sim c$ implies $a,b,c$ all belong to the same $p\in \Pi$, which in turn implies $a\sim c$.  
+
+The relation is reflexive, symmetric, and transitive, therefore it is an equivalence relation.  
+**QED.**  
 
 ## Project 6.7
 For each of the following relations deﬁned on $\mathbb{Z}$, determine whether it is an equivalence relation. If it is, determine the equivalence classes.  
@@ -57,12 +80,19 @@ Prove that each of the following relations deﬁned on $\mathbb{Z} \times \mathb
 
 ## (i) $(x,y)\sim (v,w)$ if $x^2+y^2=v^2+w^2$  
 The relation is an equivalence relation because the relation $x^2+y^2=v^2+w^2$ is reflexive, symmetric, and transitive.  
-$x^2+y^2=x^2+y^2$, therefore it is reflexive.  
-$x^2+y^2=v^2+w^2 \iff v^2+w^2=x^2+y^2$,  therefore it is symmetric.    
-$x^2+y^2=v^2+w^2$ and $v^2+w^2=a^2+b^2$ $\iff$ $x^2+y^2=a^2+b^2$,  therefore it is transitive.    
+$x^2+y^2=x^2+y^2$, by the reflexive property of equality, therefore the relation is reflexive.  
+$x^2+y^2=v^2+w^2 \iff v^2+w^2=x^2+y^2$, by the symmetric property of equality, therefore the relation is symmetric.    
+$x^2+y^2=v^2+w^2$ and $v^2+w^2=a^2+b^2$ $\iff$ $x^2+y^2=a^2+b^2$, by the transitive property of equality, therefore the relation is transitive.    
+All of the above properties hold true due to the properties of equality.  
+
+Each equivalence class formed by this relation consists of points $(x, y)$ that lie at the same distance from the origin as one another, or in other words all the points of a circle centered around the origin.  
 
 ## (ii) $(x,y)\sim (v,w)$ if $y-x^2=w-v^2$
+The relation is an equivalence relation because the relation $y-x^2=w-v^2$ is reflexive, symmetric, and transitive, by the same properties of equality as shown part (i).  
 
+Each equivalence class formed by this relation consists of all points $(x, y)$ that satisfy $y-x^2=k$ for some constant $k$. In other words, all the points in an equivalence class are all points on a parabola $y=x^2+k$ for a particular constant $k$, where a different $k$ leads to a different parabola and a different equivalence class.  
 
 ## (iii) $(x,y)\sim (v,w)$ if $xy=vw$
+The relation is an equivalence relation because the relation $xy=vw$ is reflexive, symmetric, and transitive, by the same properties of equality as shown part (i).  
 
+Each equivalence class formed by this relation consists of all points $(x, y)$ that lie on the curve $y=\frac{k}{x}$, for some constant $k$.  Changing the constant $k$ results in a different curve and a different equivalence class.  
