--- a/binghamton/math-330/hw/hw11.md
+++ b/binghamton/math-330/hw/hw11.md
@@ -5,7 +5,7 @@ Prove props. 6.15-16, 6.24(a). Do project 6.9. (M 3/31)
 
 ## Proposition 6.16
 
-## Proposition 6.24(a)
+## Proposition 6.25
 
 ## Project 6.9
 
