--- a/binghamton/math-330/hw/hw11.md
+++ b/binghamton/math-330/hw/hw11.md
@@ -1,11 +1,68 @@
 # Homework 11
-Prove props. 6.15-16, 6.24(a). Do project 6.9. (M 3/31)  
+Prove Props. 6.15-16, 6.25, 8.6. Do Projects 6.9, 6.27
 
 ## Proposition 6.15
+The integer $m$ is odd if and only if $\exists q\in\mathbb{Z}$ such that $m=2q+1$.  
+
+**Proof.**  
+Recall that $m\in\mathbb{Z}$ is even $\iff$ $m$ is divisible by $2$.  We define the set of even integers with this definition:  
+$$\mathbb{Z}_E:=\{x\in\mathbb{Z} \text{ | } x \text{ is divisible by 2 }\}$$  
+
+The odd integers are defined by those that are not even:  
+$$\mathbb{Z}_O:=\{x\in\mathbb{Z} \text{ | } x \text{ is not divisible by 2 }\}$$  
+For any integer $m\in\mathbb{Z}$ and a divisor of $n=2$, by the Division Algorithm, we know there exist unique $q,r\in\mathbb{Z}$ where $m=2q+r$. The division algorithm says that $0\leq r\leq n-1$, and when $n=2$, $0\leq r \leq 1$. Therefore, we know $r$ must be either $0 \text{ or } 1$. If we let $m$ be odd, then we know that $m$ is not divisible by $2$, therefore $r\neq 0$, leaving the only possible value $r=1$. Since $r$ is known if $m$ is odd, we can rewrite $m=2q+r$ as $m=2q+1$.  
+$\therefore m$ is odd $\iff$ $\exists q\in\mathbb{Z}$ such that $m=2q+1$.  
+**QED.**  
+
+
 
 ## Proposition 6.16
+For every $n\in \mathbb{Z}$, $n$ is even or $n+1$ is even.  
+
+**Proof.**  
+It is sufficient to prove that ($n$ is even) and ($n+1$ is even) cannot both be false, then the original statement will be true, as an $or$ is only false when both of it's operands are false.  
+Assume $n$ is not even and $n+1$ is not even, for any $n\in\mathbb{Z}$.  
+By the definition of the **odd integers**, we can rewrite the above as:  
+Assume $n$ is odd and $n+1$ is odd.  We know $n=2q+1$ for some $q\in\mathbb{Z}$, by proposition 6.15.  
+We also know $n+1=2r+1$ for some $r\in\mathbb{Z}$. Subtracting $1$ on both sides, we obtain $n=2r$.  
+By substitution, $2r=2q+1$, for some $r, q\in\mathbb{Z}$. This is unsatsifiable in the integers, so the assumption that $n$ is not even and $n+1$ is not even must be false by contradiction.   
+Therefore, since $n$ is even and $n+1$ is even cannot both be false, $n$ is even or $n+1$ is even must be true.  
+**QED.**  
 
 ## Proposition 6.25
+If $a\equiv a' \text{ (mod } n \text{)}$ and $b\equiv b' \text{ (mod } n \text{)}$, then:  
+$a+b\equiv a'+b'\text{ (mod } n \text{)} \text{ and } ab\equiv a'b' \text{ (mod } n \text{)}$  
+
+**Proof.**  
+By definition, $x\equiv y \text{ (mod } n \text{)} \iff \exists q \in \mathbb{Z} \text{ where } x-y = qn$  
+$a\equiv a'\iff \exists q \in \mathbb{Z} \text{ where } x-y = qn$
+
 
 ## Project 6.9
+On $\mathbb{Z} \times (\mathbb{Z} - \{0\})$ we define the relation $(m_1, n_1) \sim (m_2, n_2)$ if $m_1 n_2 = n_1 m_2$.
 
+(i) Show that this is an equivalence relation.
+
+(ii) For two equivalence classes $[(m_1, n_1)]$ and $[(m_2, n_2)]$, we define two binary operations $\oplus$ and $\odot$ via
+
+$$[(m_1, n_1)] \oplus [(m_2, n_2)] = [(m_1 n_2 + m_2 n_1, n_1 n_2)]\\\\and\\\\ [(m_1, n_1)] \odot [(m_2, n_2)] = [(m_1 m_2, n_1 n_2)].$$
+
+What properties do the binary operations $\oplus$ and $\odot$ have?
+
+
+## Project 6.27
+**Axiom 1.5 recap (cancellation)**: Let $m,p,q\in\mathbb{Z}$. If $m\cdot n = m\cdot p$ and $m\neq 0$, then $m=p$.  
+
+Study for which $n$ the set $\mathbb{Z}_n$ satisfies the cancellation property (Axiom 1.5). Prove your assertions.  
+
+
+**Proof.**  
+
+**QED.**  
+
+
+*Things just got real...*  
+## Proposition 8.6  
+$(\forall x,y\in\mathbb{R}-\{0\}) \text{ }\text{ } (xy)^{-1}=x^{-1}y^{-1}$  
+
+**Proof.**  
