--- a/binghamton/math-330/hw/hw11.md
+++ b/binghamton/math-330/hw/hw11.md
@@ -35,8 +35,17 @@ $a+b\equiv a'+b'\text{ (mod } n \text{)} \text{ and } ab\equiv a'b' \text{ (mod 
 
 **Proof.**  
 By definition, $x\equiv y \text{ (mod } n \text{)} \iff \exists q \in \mathbb{Z} \text{ where } x-y = qn$  
-$a\equiv a'\iff \exists q \in \mathbb{Z} \text{ where } x-y = qn$
+Let $n\in\mathbb{N}$ be a fixed modulus.  
+$a\equiv a'\iff \exists q \in \mathbb{Z} \text{ where } a-a' = qn$, by definition of the relation  
+$b\equiv b'\iff \exists r \in \mathbb{Z} \text{ where } b-b' = rn$, by definition of the relation  
 
+Prove there exists an $s\in\mathbb{Z} \text{ where } (a+b)-(a'+b')=sn$.  
+
+Prove there exists an $t\in\mathbb{Z} \text{ where } ab-a'b'=tn$.  
+
+Therefore, both $a+b\equiv a'+b'\text{ (mod } n \text{)} \text{ and } ab\equiv a'b' \text{ (mod } n \text{)}$ hold.  
+
+**QED.**  
 
 ## Project 6.9
 On $\mathbb{Z} \times (\mathbb{Z} - \{0\})$ we define the relation $(m_1, n_1) \sim (m_2, n_2)$ if $m_1 n_2 = n_1 m_2$.
