--- a/binghamton/math-330/hw/hw11.md
+++ b/binghamton/math-330/hw/hw11.md
@@ -34,16 +34,21 @@ If $a\equiv a' \text{ (mod } n \text{)}$ and $b\equiv b' \text{ (mod } n \text{)
 $a+b\equiv a'+b'\text{ (mod } n \text{)} \text{ and } ab\equiv a'b' \text{ (mod } n \text{)}$  
 
 **Proof.**  
-By definition, $x\equiv y \text{ (mod } n \text{)} \iff \exists q \in \mathbb{Z} \text{ where } x-y = qn$  
+By definition, $x\equiv y \text{ (mod } n \text{)} \iff x-y \text{ is divisible by n} \iff \exists q \in \mathbb{Z} \text{ where } x-y = qn$  
 Let $n\in\mathbb{N}$ be a fixed modulus.  
 $a\equiv a'\iff \exists q \in \mathbb{Z} \text{ where } a-a' = qn$, by definition of the relation  
 $b\equiv b'\iff \exists r \in \mathbb{Z} \text{ where } b-b' = rn$, by definition of the relation  
 
-Prove there exists an $s\in\mathbb{Z} \text{ where } (a+b)-(a'+b')=sn$.  
+Prove that $(a+b)-(a'+b')$ is divisible by $n$.  
+Rearranging the terms:  
+$(a+b)-(a'+b')=a+b-a'-b'=a-a'+b-b'$  
+Substituting our definitions:  
+$a-a'+b-b'=qn+rn=n(q+r)$, which is divisible by $n$.  
 
-Prove there exists an $t\in\mathbb{Z} \text{ where } ab-a'b'=tn$.  
+Now prove that $ab-a'b'$ is divisible by $n$.  
 
-Therefore, both $a+b\equiv a'+b'\text{ (mod } n \text{)} \text{ and } ab\equiv a'b' \text{ (mod } n \text{)}$ hold.  
+
+Therefore, $a+b\equiv a'+b'\text{ (mod } n \text{)} \text{ and } ab\equiv a'b' \text{ (mod } n \text{)}$.  
 
 **QED.**  
 
