--- a/binghamton/math-330/hw/hw11.md
+++ b/binghamton/math-330/hw/hw11.md
@@ -46,7 +46,10 @@ Substituting our definitions:
 $a-a'+b-b'=qn+rn=n(q+r)$, which is divisible by $n$.  
 
 Now prove that $ab-a'b'$ is divisible by $n$.  
-
+Add and subtract $a'b$:  
+$ab-a'b+a'b-a'b'=b(a-a')+a'(b-b')$  
+Substituting our definitions:  
+$b(qn)+a'(rn)=n(bq+a'r)$, which is divisible by $n$.      
 
 Therefore, $a+b\equiv a'+b'\text{ (mod } n \text{)} \text{ and } ab\equiv a'b' \text{ (mod } n \text{)}$.  
 
@@ -56,6 +59,13 @@ Therefore, $a+b\equiv a'+b'\text{ (mod } n \text{)} \text{ and } ab\equiv a'b' \
 On $\mathbb{Z} \times (\mathbb{Z} - \{0\})$ we define the relation $(m_1, n_1) \sim (m_2, n_2)$ if $m_1 n_2 = n_1 m_2$.
 
 (i) Show that this is an equivalence relation.
+
+**Proof.**  
+$m_1n_2=m_1n_2$, therefore the relation is **reflexive**.  
+$m_1n_2=n_1m_2 \implies n_1m_2=m_1n_2$, therefore the relation is **symmetric**.  
+We now prove that $(m_1,n_1)\sim (m_2, n_2) \text{ and } (m_2, n_2) \sim (m_3, n_3) \implies (m_1,n_1)\sim (m_3, n_3)$.    
+`TODO`
+**QED.**  
 
 (ii) For two equivalence classes $[(m_1, n_1)]$ and $[(m_2, n_2)]$, we define two binary operations $\oplus$ and $\odot$ via
 
