--- a/binghamton/math-330/hw/hw11.md
+++ b/binghamton/math-330/hw/hw11.md
@@ -56,14 +56,14 @@ Therefore, $a+b\equiv a'+b'\text{ (mod } n \text{)} \text{ and } ab\equiv a'b' \
 **QED.**  
 
 ## Project 6.9
-On $\mathbb{Z} \times (\mathbb{Z} - \{0\})$ we define the relation $(m_1, n_1) \sim (m_2, n_2)$ if $m_1 n_2 = n_1 m_2$.
+On $\mathbb{Z} \times (\mathbb{Z} - \{0\})$ we define the relation $(x, y) \sim (z, w)$ if $xw = yz$.
 
 (i) Show that this is an equivalence relation.
 
 **Proof.**  
-$m_1n_2=m_1n_2$, therefore the relation is **reflexive**.  
-$m_1n_2=n_1m_2 \implies n_1m_2=m_1n_2$, therefore the relation is **symmetric**.  
-We now prove that $(m_1,n_1)\sim (m_2, n_2) \text{ and } (m_2, n_2) \sim (m_3, n_3) \implies (m_1,n_1)\sim (m_3, n_3)$.    
+$xy=xy$, therefore the relation is **reflexive**.  
+$xy=zw \implies zw=xy$, therefore the relation is **symmetric**.  
+We now prove that $(x, y)\sim (z, w) \text{ and } (z, w) \sim (j, k) \implies (x, y)\sim (j, k)$.    
 `TODO`
 **QED.**  
 
