--- a/binghamton/math-330/hw/hw11.md
+++ b/binghamton/math-330/hw/hw11.md
@@ -64,29 +64,93 @@ On $\mathbb{Z} \times (\mathbb{Z} - \{0\})$ we define the relation $(x, y) \sim 
 $xy=xy$, therefore the relation is **reflexive**.  
 $xy=zw \implies zw=xy$, therefore the relation is **symmetric**.  
 We now prove that $(x, y)\sim (z, w) \text{ and } (z, w) \sim (j, k) \implies (x, y)\sim (j, k)$.    
-`TODO`
+Rewritten, prove that $xw=yz$ and $zk=wj$ implies $xk=yj$.  
+We know $y,w,k\neq0$.  
+Multiplying the first equation by $k$:  
+$xkw=yzk$  
+Substituting the second equation:  
+$xkw=ywj$  
+We can cancel the $w$ on both sides, as $w\neq0$:  
+$xk=yj$.  
+Therefore, the relation is **transitive**.  
+Since the relation is reflexive, symmetric, and transitive, then the relation is an equivalence relation.  
 **QED.**  
 
-(ii) For two equivalence classes $[(m_1, n_1)]$ and $[(m_2, n_2)]$, we define two binary operations $\oplus$ and $\odot$ via
+(ii) For two equivalence classes $[(x, y)]$ and $[(z, w)]$, we define two binary operations $\oplus$ and $\odot$ via
 
-$$[(m_1, n_1)] \oplus [(m_2, n_2)] = [(m_1 n_2 + m_2 n_1, n_1 n_2)]\\\\and\\\\ [(m_1, n_1)] \odot [(m_2, n_2)] = [(m_1 m_2, n_1 n_2)].$$
+$$[(x, y)] \oplus [(z, w)] = [(x w + z y, y w)]\\\\and\\\\ [(x, y)] \odot [(z, w)] = [(x z, y w)].$$
 
 What properties do the binary operations $\oplus$ and $\odot$ have?
 
+If you think about it, these operations look oddly familiar.. almost like the addition and multiplication operation on the *rationals*.  
+Take this operation: $[(x, y)] \oplus [(z, w)] = [(x w + z y, y w)]$.  
+This exactly resembles addition on fractions: $\frac{x}{y}+\frac{z}{w}=\frac{xw+zy}{yw}$.  
+Same for the $\odot$ operation: $\frac{x}{y}\cdot\frac{z}{w}=\frac{xz}{yw}$. 
+In fact, take a look at the equivalence relation in part $i$:   
+$(x, y) \sim (z, w)$ if $xw = yz$  
+What this is *really* saying is that two fractions $\frac{x}{y} \text{ and } \frac{z}{w}$ are equivalent if $xw=yz$. This makes sense intuitively — take the example $\frac{2}{4} \text{ and } \frac{5}{10}$. We know both of them reduce to $\frac{1}{2}$, but neither is in it's simplest form. The equivalence relation says these two fractions are equal because $2\cdot10=4\cdot5$. In other words, this relation formalizes the notion that fractions can have the same value, even with different numerators and denominators.  
+Additionally, the definition of the set of ordered pairs from $\mathbb{Z} \times (\mathbb{Z} - \{0\})$ when interpreted in this way states that the **denominator can never be 0**, which fits into the definition of the rationals.  
+
+Let $F=(Z×(Z−\{0\}))/\sim$, the set of equivalence classes $[(x,y)]$.  
+The set $F$ is equipped with the binary operations $\oplus$ and $\odot$. The set $F$ contains every uniquely valued fraction — all the fractions that are not equivalent to themselves.  
+
+Due to time constraints, I won't be proving these, but:  
+- Both operations are associative commutative, and closed under the set $F$.  
+- $\odot$ distributes over $\oplus$.  
+- $\oplus$ has the identity element $[(0, 1)]$, or all fractions equivalent to $0$.  
+- $\odot$ has the identity element $[(1, 1)]$, or all fractions equivalent to $\frac{1}{1}$
+- For every $\frac{m}{n}\in F$, there is an additive inverse
+- For every $\frac{m}{n}\in F$ where $m\neq 0$, there is a multiplicitive inverse
+
+Looking at this structure, we can say the fields $(F, \oplus, \odot)$ and $(\mathbb{Q}, +, \times)$ are isomorphic. In other words, we have constructed $\mathbb{Q}$ from $\mathbb{Z}$. Even though I didn't specifically answer the question, can I still get full credit please? I spent a bit of time thinking about this :(.
 
 ## Project 6.27
 **Axiom 1.5 recap (cancellation)**: Let $m,p,q\in\mathbb{Z}$. If $m\cdot n = m\cdot p$ and $m\neq 0$, then $m=p$.  
 
 Study for which $n$ the set $\mathbb{Z}_n$ satisfies the cancellation property (Axiom 1.5). Prove your assertions.  
 
+Consider $\mathbb{Z}_6$:  
+$2\cdot3 = 6 \equiv 0$  
+$1\cdot6=6 \equiv 0$  
+$3\neq0 \text{ in } \mathbb{Z}_6$  
+
+Consider $\mathbb{Z}_7$:  
+$1\cdot7 = 7 \equiv 0$  
+$1\cdot0=7 \equiv 0$  
+$7=0 \text{ in } \mathbb{Z}_7$  
+
+**Conclusion:**  Cancellation is satisfiable where $n$ is prime.  
 
 **Proof.**  
+
+Suppose $n$ is not prime. Let $d$ be a non-trivial divisor of $n$.  
+Since $d$ divides $n$, there exists $q\in\mathbb{Z}$ where $n=qd$.  
+$d\cdot \frac{n}{d}\equiv 0$  
+$d\cdot 0\equiv 0$  
+Since $d$ is non-trivial, $\frac{n}{d}\neq0$, therefore the cancellation property is not satisfiable.  
+
+Now suppose $n$ is prime, that is, it's only divisors are $1$ and $n$, and $n\neq1$.  
+<!-- Since $n\equiv 0$ in $\mathbb{Z}_n$, $m\neq n$.   -->
+We show for some $a,b,c\in\mathbb{Z}_n$, if $a\cdot b = a\cdot c$ and $a\neq 0$, then $b=c$  
+Since $a,b,c\in\mathbb{Z}_n$, we rewrite the original statement as:  
+$a\cdot b \equiv a\cdot c$ (mod n)  
+By definition, this means $n$ divides $a(b-c)$. By Euclid's lemma, if $n$ divides $a(b-c)$, and $n$ is prime, then $n$ must divide either $a$ or $(b-c)$.  
+If $n$ divides $a$, $n=a$, because $n\neq 1$. However, this would mean $a\equiv 0$, and we can assume this is false as $a\neq 0$ by the cancellation axiom.  
+If $n$ does not divide $a$, then by Euclid's lemma, $n$ must divide $(b-c)$. By definition, this means $b\equiv c$.  
 
 **QED.**  
 
 
-*Things just got real...*  
 ## Proposition 8.6  
 $(\forall x,y\in\mathbb{R}-\{0\}) \text{ }\text{ } (xy)^{-1}=x^{-1}y^{-1}$  
 
 **Proof.**  
+By proposition 8.5, since $x,y\in\mathbb{R}-\{0\}$, $(xy)(xy)^{-1}= 1$.  
+If $(xy)^{-1}=x^{-1}y^{-1}$, then $(xy)(x^{-1}y^{-1})=1$.  
+We rearrange the terms:  
+$(xy)(x^{-1}y^{-1})=1$  
+$xy\cdot x^{-1}y^{-1}=1$  
+$(x\cdot x^{-1}) \cdot (y\cdot y^{-1})=1$  
+$1 \cdot 1=1$ , by proposition 8.5  
+$\therefore (xy)^{-1}=x^{-1}y^{-1}$.  
+**QED.**  
