--- a/binghamton/math-330/hw/hw12.md
+++ b/binghamton/math-330/hw/hw12.md
@@ -38,19 +38,35 @@ $\text{Determine which of the following functions are injective, surjective, or 
 
 $\text{(i) } f : \mathbb{Z} \to \mathbb{Z}, f(n) = n^2\text{.}$  
 
+This is neither surjective or injective. The image is $\mathbb{Z}_{\geq0}$, while the codomain is $\mathbb{Z}$, therefore it is not surjective.  For both $x=1,-1$, we know $y=1$, therefore it is not injective.  
+
 $\text{(ii) } f : \mathbb{Z} \to \mathbb{Z}_{\geq 0}, f(n) = n^2\text{.}$  
 
+This is surjective, as the image equals the codomain. However, this is not injective, for the same reason as in part $\text{(i)}$.  
+
 $\text{(iii) } f : \mathbb{Z}_{\geq 0} \to \mathbb{Z}_{\geq 0}, f(n) = n^2\text{.}$    
+
+This is bijective, because it is injective and surjective.  It is injective because now the function is strictly monotonic, and will never repeat an output. It is surjective because the image equals the codomain.  
 
 ## Project 9.4
 $\text{Construct (many) functions that are}$  
 
 $\text{(i) bijective;}$  
 
+$f(x)=x$  
+The outputs of the function never repeat, therefore it is injective. The image is $\mathbb{R}$, therefore it is surjective. Since it is injective and surjective, it is bijective.  
+
 $\text{(ii) injective, but not surjective;}$  
+
+$f(x)=\frac{1}{x}$  
+The outputs of the function never repeat, therefore it is injective. The image is $\mathbb{R}-\{0\}$, while the codomain is $\mathbb{R}$, therefore it is not surjective.  
 
 $\text{(iii) surjective, but not injective;}$  
 
+$f(x)=x^{3}+2x^{2}$  
+The image is $\mathbb{R}$, so it is surjective. It has 2 distinct roots, making it not injective. 
+
 $\text{(iv) neither injective nor surjective.}$  
 
-$\text{Justify your claims.}$  
+$f(x)=x^2$  
+The image is $\mathbb{R}_{\geq0}$, while the codomain is $\mathbb{R}$, therefore it is not surjective.  For both $x=1,-1$, we know $y=1$, therefore it is not injective.  
