--- a/binghamton/math-330/hw/hw12.md
+++ b/binghamton/math-330/hw/hw12.md
@@ -11,10 +11,32 @@ Use this freely.
 
 ## Proposition 8.40  
 $\text{(i) } x\in\mathbb{R}_{>0} \text{ if and only if } \frac{1}{x}\in\mathbb{R}_{>0}$  
+
+**Proof.**  
+We can rewrite this as $x\in\mathbb{R}_{>0}\iff x^{-1}\in\mathbb{R}_{>0}$, by definition of the division operation.  
+Since $\mathbb{R}_{>0}$ is defined as $\{x \in\mathbb{R}\text{ | } x > 0\}$, we can rewrite the proposition again as $x>0\iff x^{-1}>0$.  
+Axiom 8.5 states that for each $x\in\mathbb{R}-\{0\}$, there exists an inverse $x^{-1}$ where $x\cdot x^{-1}=1$.  
+This means that $x$ and $x^{-1}$ must have the same *sign*, that is, either $x, x^{-1}\in\mathbb{R}_{>0}$, or $-x, -x^{-1}\in\mathbb{R}_{>0}$. They cannot have opposite signs, as that would mean $x\cdot x^{-1}=-1$, violating our axiom. This conclusion can be rewritten as $x, x^{-1}>0$, or $-x, -x^{-1}>0$. We have proved that $x^{-1}>0\iff x>0$.  
+**QED.**  
+
 $\text{(ii) }$ Let $x,y\in\mathbb{R}_{>0}$. $\text{ If }x<y \text{ then } 0<\frac{1}{y}<\frac{1}{x}$.  
+
+
 
 ## Theorem 8.43  
 $\text{Let } x, y \in \mathbb{R} \text{ such that } x < y. \text{ There exists } z \in \mathbb{R} \text{ such that } x < z < y.$  
+
+**Proof.**  
+Given an $x, y \in \mathbb{R} \text{ such that } x < y$, we can construct a $z\in\mathbb{R}$ where $x < z < y$.  
+$$z=y-\frac{y-x}{2}$$  
+Proof that $x<z$ given $x<y$:  
+We know $x<y \iff y-x\in\mathbb{R}_{>0}$  
+`/bruh this is a backwards proof`
+$x<z \iff x<y-\frac{y-x}{2}$, by substitution of $z$  
+$\implies 2x<2y-(y-x)$, by [some proposition]  
+$\implies 2x<2y-y-x$, by [some proposition]  
+$\implies 2x<y-x$, by [some proposition]  
+$\implies 3x<y$, by [some proposition]  
 
 ## Proposition 8.49  
 $\text{Let } A \subset \mathbb{R} \text{ be nonempty. If } \sup(A) \in A \text{ then } \sup(A) \text{ is the largest}$  
