--- a/binghamton/math-330/hw/hw12.md
+++ b/binghamton/math-330/hw/hw12.md
@@ -29,7 +29,8 @@ $\text{Let } x, y \in \mathbb{R} \text{ such that } x < y. \text{ There exists }
 **Proof.**  
 Given an $x, y \in \mathbb{R} \text{ such that } x < y$, we can construct a $z\in\mathbb{R}$ where $x < z < y$.  
 $$z=y-\frac{y-x}{2}$$  
-Proof that $x<z$ given $x<y$:  
+Proof that $x<y\implies x<z$:  
+
 We know $x<y \iff y-x\in\mathbb{R}_{>0}$  
 `/bruh this is a backwards proof`
 $x<z \iff x<y-\frac{y-x}{2}$, by substitution of $z$  
