IM FUCKING CRAZY

--- a/binghamton/math-330/hw/hw12.md
+++ b/binghamton/math-330/hw/hw12.md
@@ -21,28 +21,71 @@ This means that $x$ and $x^{-1}$ must have the same *sign*, that is, either $x, 
 
 $\text{(ii) }$ Let $x,y\in\mathbb{R}_{>0}$. $\text{ If }x<y \text{ then } 0<\frac{1}{y}<\frac{1}{x}$.  
 
+**Proof.**  
 
+Assume $x,y\in\mathbb{R}_{>0} \text{ and }x<y $.  
+By part (i) of this proposition, since $x,y\in\mathbb{R}_{>0}$, we know $\frac{1}{x},\frac{1}{y}\in\mathbb{R}_{>0}$. In other words, both $\frac{1}{x}>0$ and $\frac{1}{y}>0$.  
+
+Now, prove $\frac{1}{y}<\frac{1}{x}$.  
+
+By Axiom 8.26, since $x,y\in\mathbb{R}_{>0}$, then $xy\in\mathbb{R}_{>0}$.  
+
+Since $xy>0$, we know $(xy)^{-1}>0$ by part (i) of this proposition. We can multiply both sides of the assumed true statement $x<y$ by $(xy)^{-1}$ without changing the inequality, resulting in $\frac{x}{xy}<\frac{y}{xy}$.  This simplifies to $\frac{1}{y}<\frac{1}{x}$ by the properties of inverses.  
+
+We now know $\frac{1}{y}<\frac{1}{x}$, $0<\frac{1}{x}$ and $0<\frac{1}{y}$. Therefore, $0<\frac{1}{y}<\frac{1}{x}$.  
+
+**QED.**  
 
 ## Theorem 8.43  
 $\text{Let } x, y \in \mathbb{R} \text{ such that } x < y. \text{ There exists } z \in \mathbb{R} \text{ such that } x < z < y.$  
 
 **Proof.**  
+
+Assume $x,y,z\in\mathbb{R}, \text{ and } x<y$.  
 Given an $x, y \in \mathbb{R} \text{ such that } x < y$, we can construct a $z\in\mathbb{R}$ where $x < z < y$.  
 $$z=y-\frac{y-x}{2}$$  
-Proof that $x<y\implies x<z$:  
+Proof that $x<z$:  
 
-We know $x<y \iff y-x\in\mathbb{R}_{>0}$  
-`/bruh this is a backwards proof`
+<!-- We know $x<y \iff y-x\in\mathbb{R}_{>0}$   -->
 $x<z \iff x<y-\frac{y-x}{2}$, by substitution of $z$  
-$\implies 2x<2y-(y-x)$, by [some proposition]  
-$\implies 2x<2y-y-x$, by [some proposition]  
-$\implies 2x<y-x$, by [some proposition]  
-$\implies 3x<y$, by [some proposition]  
+$\iff 2x<2y-(y-x)$, by multiplying both sides with $2$  
+$\iff 2x<2y+(-y+x)$, by proposition 8.22(i)  
+$\iff 2x<(2y-y)+x$, by associativity  
+$\iff 2x<y+x$    
+$\iff x<y$, by proposition 8.32(i), adding $-x$ to both sides  
+Since $x<z\iff x<y$, and it is assumed $x<y$, we know $x<z$.  
+
+Now proof that $z<y$:  
+
+$z<y \iff y-\frac{y-x}{2}<y$, by substitution of $z$  
+$\iff 2y-(y-x)<2y$, by muiltiplying both sides of $2$  
+$\iff 2y+(-y+x)<2y$, by proposition 8.22(i)  
+$\iff (2y-y)+x<2y$, by associativity  
+$\iff y+x<2y$  
+$\iff x<y$, by proposition 8.32(i), adding $-y$ to both sides  
+Since $z<y\iff x<y$, and it is assumed $x<y$, we know $z<y$.  
+
+Since $x<z$ and $z<y$, we know $x<z<y$. We have constructed a number $z$ such that for any $x,y\in\mathbb{R}$ where $x<y$, $x<z<y$.  
+
+**QED.**  
 
 ## Proposition 8.49  
 $\text{Let } A \subset \mathbb{R} \text{ be nonempty. If } \sup(A) \in A \text{ then } \sup(A) \text{ is the largest}$  
 $\text{element of } A\text{, i.e., } \sup(A) = \max(A)\text{. Conversely, if } A \text{ has a largest element then}$  
 $\max(A) = \sup(A) \text{ and } \sup(A) \in A\text{.}$  
+
+**Proof.**  
+
+Part 1.  
+
+The definition of the supremum of a set $A$ is the least upper bound of $A$. The set of upper bounds on $A$ can be defined as $\{x\in \mathbb{R} \text{ | } (\forall a\in A) \text{ } a\leq x\}$.  
+Let $x=\text{sup}(A)$.  We are given that $x\in A$, and by definition of the supremum, we know $(\forall a\in A) \text{ } a\leq x$. Note the definition of $\text{max}(A)$ is some $x\in A$ where $(\forall a\in A) \text{ } a\leq x$. The definitions are the same, therefore, $\text{sup}(A)\in A \iff \text{sup}(A)=\text{max(A)}$.  
+
+Part 2.  
+
+Since in part 1 we proved that $\text{sup}(A)\in A \iff \text{sup}(A)=\text{max(A)}$, because this is a two way implication, the converse is true.  
+
+**QED.**
 
 ## Project 8.44
 $\text{Construct a subset } A \subseteq \mathbb{R} \text{ that satisfies}$  
@@ -50,11 +93,15 @@ $\text{(i) } 1 \in A \text{ and}$
 $\text{(ii) if } n \in A \text{ then } n + 1 \in A\text{,}$  
 $\text{yet for which } \mathbb{R}_{>0} \text{ is not a subset of } A\text{.}$    
 
+$\mathbb{R}_{\geq1}$. This seems too simple to be true...    
+
 ## Project 8.51  
 $\text{For a nonempty set } B \subseteq \mathbb{R} \text{ one can define the greatest lower bound}$  
 $\inf(B) \text{ (or infimum) of } B\text{. Give the precise definition for } \inf(B) \text{ and prove that it is}$  
 $\text{unique if it exists. Also define } \min(B) \text{ and prove the analogue of Proposition 8.49}$
 $\text{for greatest lower bounds and minima.}$  
+
+
 
 ## Project 9.3  
 $\text{Determine which of the following functions are injective, surjective, or bijective. Justify your assertions.}$  
