--- a/binghamton/math-330/hw/hw12.md
+++ b/binghamton/math-330/hw/hw12.md
@@ -79,11 +79,11 @@ $\max(A) = \sup(A) \text{ and } \sup(A) \in A\text{.}$
 Part 1.  
 
 The definition of the supremum of a set $A$ is the least upper bound of $A$. The set of upper bounds on $A$ can be defined as $\{x\in \mathbb{R} \text{ | } (\forall a\in A) \text{ } a\leq x\}$.  
-Let $x=\text{sup}(A)$.  We are given that $x\in A$, and by definition of the supremum, we know $(\forall a\in A) \text{ } a\leq x$. Note the definition of $\text{max}(A)$ is some $x\in A$ where $(\forall a\in A) \text{ } a\leq x$. The definitions are the same, therefore, $\text{sup}(A)\in A \iff \text{sup}(A)=\text{max(A)}$.  
+Let $x=\sup(A)$.  We are given that $x\in A$, and by definition of the supremum, we know $(\forall a\in A) \text{ } a\leq x$. Note the definition of $\text{max}(A)$ is some $x\in A$ where $(\forall a\in A) \text{ } a\leq x$. The definitions are the same, therefore, $\sup(A)\in A \iff \sup(A)=\text{max(A)}$.  
 
 Part 2.  
 
-Since in part 1 we proved that $\text{sup}(A)\in A \iff \text{sup}(A)=\text{max(A)}$, because this is a two way implication, the converse is true.  
+Since in part 1 we proved that $\sup(A)\in A \iff \sup(A)=\text{max(A)}$, and because this is a two way implication, the converse is true.  
 
 **QED.**
 
@@ -101,22 +101,55 @@ $\inf(B) \text{ (or infimum) of } B\text{. Give the precise definition for } \in
 $\text{unique if it exists. Also define } \min(B) \text{ and prove the analogue of Proposition 8.49}$
 $\text{for greatest lower bounds and minima.}$  
 
+**Definitions.**  
+A **greatest lower bound** for $A$ is a lower bound that is greater than or equal to every lower bound for $A$.  
+A real number $b\in A$ is the **minimum** or **smallest** element of $A$ if for all $a\in A$, $b\leq a$.  In this case we write $b=\min(A)$.  
+The set of lower bounds for $A$ can be denoted as $A_l=\{x\in\mathbb{R} \text{ | } (\forall a\in A) \text{ } x\leq a\}$. The greatest lower bound for $A$ can also be represented as $\max(A_l)$, by it's definition.  
 
+### The greatest lower bound of $A$, if it exists, is unique    
+
+**Proof.**  
+
+We can rewrite the statement as follows:  
+If $x_1$ and $x_2$ are greatest lower bounds for $A$, then $x_1 = x_2$  
+
+Let $x_1$ and $x_2$ be greatest lower bounds for $A$.  
+By definition, $x_1=\max(A_l)$, and $x_2=\max(A_l)$.  Since the maximum element of a set, if it exists, must be unique, then $\max(A_l)=\max(A_l)$. Now by transitivity, $x_1=x_2$.  
+
+**QED.**  
+
+### Proposition 8.49 (but for the greatest lower bound instead) 
+$\text{Let } A \subset \mathbb{R} \text{ be nonempty. If } \inf(A) \in A \text{ then } \inf(A) \text{ is the smallest}$  
+$\text{element of } A\text{, i.e., } \inf(A) = \min(A)\text{. Conversely, if } A \text{ has a smallest element then}$  
+$\min(A) = \inf(A) \text{ and } \inf(A) \in A\text{.}$  
+
+**Proof.**  
+
+Part 1.  
+
+The definition of the infimum of a set $A$ is the greatest lower bound of $A$. The set of lower bounds on $A$ can be defined as $\{x\in \mathbb{R} \text{ | } (\forall a\in A) \text{ } x\leq a\}$.  
+Let $x=\inf(A)$.  We are given that $x\in A$, and by definition of the infimum, we know $(\forall a\in A) \text{ } x\leq a$. Note the definition of $\min(A)$ is some $x\in A$ where $(\forall a\in A) \text{ } x\leq a$. The definitions are the same, therefore, $\sup(A)\in A \iff \sup(A)=\text{max(A)}$.  
+
+Part 2.  
+
+Since in part 1 we proved that $\inf(A)\in A \iff \inf(A)=\min(A)$, and because this is a two way implication, the converse is true.  
+
+**QED.**  
 
 ## Project 9.3  
 $\text{Determine which of the following functions are injective, surjective, or bijective. Justify your assertions.}$  
 
 $\text{(i) } f : \mathbb{Z} \to \mathbb{Z}, f(n) = n^2\text{.}$  
 
-This is neither surjective or injective. The image is $\mathbb{Z}_{\geq0}$, while the codomain is $\mathbb{Z}$, therefore it is not surjective.  For both $x=1,-1$, we know $y=1$, therefore it is not injective.  
+This is neither surjective or injective. The image is a subset of $\mathbb{Z}_{\geq0}$, while the codomain is $\mathbb{Z}$, therefore it is not surjective.  For both $x=1,-1$, we know $y=1$, therefore it is not injective.  
 
 $\text{(ii) } f : \mathbb{Z} \to \mathbb{Z}_{\geq 0}, f(n) = n^2\text{.}$  
 
-This is surjective, as the image equals the codomain. However, this is not injective, for the same reason as in part $\text{(i)}$.  
+This is neither surjective or injective. This is not surjective, as the image is a subset of $Z_{\geq0}$, the codomain (the subset contains all perfect squares, but numbers like 2, 3, 5 have no mapping). This is not injective, for the same reason as in part $\text{(i)}$.  
 
 $\text{(iii) } f : \mathbb{Z}_{\geq 0} \to \mathbb{Z}_{\geq 0}, f(n) = n^2\text{.}$    
 
-This is bijective, because it is injective and surjective.  It is injective because now the function is strictly monotonic, and will never repeat an output. It is surjective because the image equals the codomain.  
+It is injective because now the function is strictly monotonic, and will never repeat an output. It is not surjective for the same reason as part $(ii)$.  
 
 ## Project 9.4
 $\text{Construct (many) functions that are}$  
@@ -134,7 +167,7 @@ The outputs of the function never repeat, therefore it is injective. The image i
 $\text{(iii) surjective, but not injective;}$  
 
 $f(x)=x^{3}+2x^{2}$  
-The image is $\mathbb{R}$, so it is surjective. It has 2 distinct roots, making it not injective. 
+The image is $\mathbb{R}$, so it is surjective. It has 2 distinct roots, making it not injective (multiple elements in the domain map to 0). 
 
 $\text{(iv) neither injective nor surjective.}$  
 
