finish hw 13 question 9.7 part 1 man wtf

--- a/binghamton/math-330/hw/hw13.md
+++ b/binghamton/math-330/hw/hw13.md
@@ -15,12 +15,21 @@ respectively.
 We need to prove that $g \circ f : A \to C$ is also surjective.  
 In other words, we need to prove that  $(\forall c\in C)\text{ } (\exists a \in A) \text{ } g(f(a))=c$  
 
+Let $c\in C$.  
+By definition of surjectivity, we know there exists a $b\in B$ for any $c\in C$ where $g(b)=c$.  
+Therefore, $f(a)\in B$.  
+By definition of surjectivity, we know there exists an $a\in A$ for any $b\in B$ where $f(a)=b$.  
+Therefore, $a\in A$.  
+
+We have proved that for all $c\in C$, there exists an $a\in A$ where $g(f(a)) = c$.  
+
+**QED.**  
 
 (iii) If $f : A \to B$ is bijective and $g : B \to C$ is bijective then $g \circ f : A \to C$ is bijective.  
 
+**Proof.**  
 
-
-## Proposition 9.10
+## Proposition 9.10 (Optional)
 
 (ii) $f$ is surjective if and only if $f$ has a right inverse.  
 
