--- a/binghamton/math-330/hw/hw13.md
+++ b/binghamton/math-330/hw/hw13.md
@@ -29,6 +29,16 @@ We have proved that for all $c\in C$, there exists an $a\in A$ where $g(f(a)) = 
 
 **Proof.**  
 
+Let $f : A \to B$ and $g : B\to C$ be bijective functions. Recall that a function is bijective iff it is both injective and surjective. 
+
+Since $f$ and $g$ are injective, $g\circ f$ is injective by part (i) of this proposition.
+
+Since $f$ and $g$ are surjective, $g\circ f$ is surjective by part (ii) of this proposition.  
+
+Since $g\circ f$ is both injective and surjective, then it is bijective.  
+
+**QED.**  
+
 ## Proposition 9.10 (Optional)
 
 (ii) $f$ is surjective if and only if $f$ has a right inverse.  
@@ -38,6 +48,19 @@ We have proved that for all $c\in C$, there exists an $a\in A$ where $g(f(a)) = 
 ## Proposition 9.11
 
 If a function is bijective then it's inverse is unique.  
+
+**Proof.**  
+Let $f : A \to B$ be a bijective function.  
+By proposition 9.10(iii), an inverse $g$ exists.  
+Assume there exists inverses $g_1 : B \to A \text{ and } g_2 : B \to A$, such that $g_1 \neq g_2$.  
+<!-- By definition of a two-way inverse, we know $g_1\circ f = \text{id}_A$ and $f\circ g_1 = \text{id}_B$.  
+Additionally, $g_2\circ f = \text{id}_A$ and $f\circ g_2 = \text{id}_B$.   -->
+Let $x\in A,\text{ } b=f(x)$.  
+By the definition of an inverse, $g_1(b)=x$ and $g_2(b)=x$.  
+
+Since $g_1 \text{ and } g_2$ map to the same element $x\in A$ given the same input $b\in B$, $g_1=g_2$.  
+
+**QED.**  
 
 ## Proposition 9.14
 
