--- a/binghamton/math-330/hw/hw13.md
+++ b/binghamton/math-330/hw/hw13.md
@@ -50,15 +50,16 @@ Since $g\circ f$ is both injective and surjective, then it is bijective.
 If a function is bijective then it's inverse is unique.  
 
 **Proof.**  
+
 Let $f : A \to B$ be a bijective function.  
 By proposition 9.10(iii), an inverse $g$ exists.  
 Assume there exists inverses $g_1 : B \to A \text{ and } g_2 : B \to A$, such that $g_1 \neq g_2$.  
 <!-- By definition of a two-way inverse, we know $g_1\circ f = \text{id}_A$ and $f\circ g_1 = \text{id}_B$.  
 Additionally, $g_2\circ f = \text{id}_A$ and $f\circ g_2 = \text{id}_B$.   -->
-Let $x\in A,\text{ } b=f(x)$.  
-By the definition of an inverse, $g_1(b)=x$ and $g_2(b)=x$.  
+Let $b\in B$, and $a\in A\text{ such that } b=f(a)$.  We know $a$ exists, because $f$ is bijective (specifically, surjective).  
+By the definition of an inverse, $g_1(b)=g_1(f(a))=a$ and $g_2(f(a))=a$.  
 
-Since $g_1 \text{ and } g_2$ map to the same element $x\in A$ given the same input $b\in B$, $g_1=g_2$.  
+Since $g_1 \text{ and } g_2$ map to the same element $a\in A$ given the same input $b\in B$, $g_1=g_2$.  
 
 **QED.**  
 
@@ -85,6 +86,15 @@ Let $f: A \to B$ and $g: B \to C$. Decide whether each of the following is true 
 
 (i) If $f$ is injective and $g$ is surjective then $g \circ f$ is surjective.  
 
-
+**This is false.  Counterexample:**  
+![alt text](image.png)
 
 (ii) If $g \circ f$ is bijective then $g$ is surjective and $f$ is injective.  
+
+**Proof.**  
+
+Let $f: A\to B$ and $g: B\to C$.  
+Let $h: A\to C=g\circ f$, where $h$ is bijective (injective and surjective).  
+
+For any $c\in C$, we know there exists an $a\in A$ where $h(a)=c$, since $h$ is surjective.  
+We also know $h(a)=g(f(a))$, where $f(a)\in B$. Since for any $c\in C$ there exists an $f(a)\in B$ where $g(f(a))=c$, we know $g$ is surjective by definition.  
