do work blahj blah

--- a/binghamton/math-330/hw/hw13.md
+++ b/binghamton/math-330/hw/hw13.md
@@ -96,5 +96,13 @@ Let $f: A \to B$ and $g: B \to C$. Decide whether each of the following is true 
 Let $f: A\to B$ and $g: B\to C$.  
 Let $h: A\to C=g\circ f$, where $h$ is bijective (injective and surjective).  
 
+**Prove $g$ is surjective.**  
 For any $c\in C$, we know there exists an $a\in A$ where $h(a)=c$, since $h$ is surjective.  
 We also know $h(a)=g(f(a))$, where $f(a)\in B$. Since for any $c\in C$ there exists an $f(a)\in B$ where $g(f(a))=c$, we know $g$ is surjective by definition.  
+
+**Prove $f$ is injective.**  
+Assume $f$ is not injective, that is, there exists $a_1, a_2\in A$ such that $a_1 \neq a_2$ but $f(a_1)=f(a_2)$ by negating the definition of injectivity.  
+Since $f(a_1)=f(a_2)$, by the properties of a function $g(f(a_1))=g(f(a_2)) \iff h(a_1) = h(a_2)$.  
+However, we know $h$ is bijective, which means that $h(a_1)\neq h(a_2)$, given $a_1\neq a_2$.  Therefore by contradiction, $h$ must be injective.  
+
+**QED.**  
